2000-10-06  Radek Doulik  <rodo@helixcode.com>

	* properties.c: add title to GtkHTMLEditPropertiesDialog
	(gtk_html_edit_properties_dialog_new): added title parameter
	(switch_page): new signal

	* menubar.c (insert_image_cb): use GTK_HTML_EDIT_PROPERTY_IMAGE,
	not GTK_HTML_EDIT_PROPERTY_LINK
	(insert_image_cb): fix title
	(insert_link_cb): fix title

	* popup.c (popup_show): use GTK_HTML_EDIT_PROPERTY_IMAGE for image
	instead of GTK_HTML_EDIT_PROPERTY_PARAGRAPH

	* image.c (image_properties): don't use cd->obj here, use
	cd->html->engine->cursor->object instead
	added HTMLImage   *image; to GtkHTMLEditImageProperties
	(insert_or_apply): use GtkHTMLEditImageProperties::image here
	removed old code 

2000-10-06  Larry Ewing  <lewing@helixcode.com>

	* resolver-progressive-impl.[ch]: files added. The start of the
	progressive data sink implmentation.

	* resolver.c (impl_HTMLEditor_Resolver_loadURL): change prototype
	to match the new idl, and add some test code to try out the sink
	interface.

	* editor-control-factory.c (load_from_corba): pass the html widget
	along too.
	(url_requested_cb): pass the html widget.
	(load_from_corba): create the sink add pass it in the loadURL
	call.

	* Makefile.am (html_editor_control_SOURCES): add
	resolver-progressive-impl.[ch]

	* HTMLEditor.idl: Change the loadURL prototype to use the
	ProgressiveDataSink interface.

2000-10-05  Larry Ewing  <lewing@helixcode.com>

	* test-html-editor-control.c (container_create): attach the
	resolver to the control frame now that the component expects it
	there.

	* editor-control-factory.c (load_from_corba): fix the extreme
	brokeness involving the uih.  Now we try to resolve the interface
	through the control frame.

2000-10-05  Michael Meeks  <michael@helixcode.com>

	* toolbar.c (toolbar_setup): upd.

	* menubar.c (menubar_setup): upd.

2000-10-04  Michael Meeks  <michael@helixcode.com>

	* menubar.c (menubar_setup): simplify with new helper.
